python-pika-pool (0.1.3-2) UNRELEASED; urgency=medium

  * d/watch: Get orig tarball from pypi.debian.net.

 -- Corey Bryant <corey.bryant@canonical.com>  Fri, 04 Mar 2016 13:54:32 -0500

python-pika-pool (0.1.3-1) unstable; urgency=medium

  * Initial release. (Closes: #810089)

 -- Thomas Goirand <zigo@debian.org>  Wed, 02 Mar 2016 13:36:30 +0000