@@ -22,12 +22,7 @@ override_dh_auto_install:
 
 override_dh_auto_test:
 ifeq (,$(findstring nocheck, $(DEB_BUILD_OPTIONS)))
-	echo "Cannot run unit tests, as it needs rabbitmq-server running"
-#	set -e ; for pyvers in $(PYTHONS) $(PYTHON3S); do \
-#		rabbitmq-server & export RABBIT_PID=$$! ; \
-#		python$$pyvers -m pytest test.py ; \
-#		kill -9 $$RABBIT_PID ; \
-#	done
+	echo "Unit tests are run via autopkgtests, as they need rabbitmq-server running"
 endif
 
 override_dh_clean:
